# Wind_Turbine

LES/: CMakeLists.txt  Makefile  Makefile.inc  Makefile.inc.aegean  Makefile.inc.copper  Makefile.inc.mesabi  Makefile.inc.shepard  README  common.f90  fft_hos.f90  fort_depend.py  grid.f90  hdf5_hos.f90  hos.f90  hos_param.f90  initial.f90  input_output_list.csv  io.f90  io_hos.f90  lib_array.f90  main.f90  main_hos.f90  makefile.dep  navier.f90  navier_fu.f90  navier_les.f90  navier_pressure.f90  param.f90  poisson.f90  post.f90  retag.sh  smooth_hos.f90  spectral_hos.f90  tags  turbine_model.f90  variable_list.csv  wavecontrol.f90
LES/2decomp/: CMakeLists.txt  Makefile  alloc.f90  decomp.f90  discontinuity_smooth.f90  factor.f90  fft_fftw3.f90  fftw3_interface.f90  ghost.f90  io.f90  spectral.f90  utils.f90
LES/2decomp_2/: decomp.F90
LES/cases/Clipper_tsr5_acl/: FOIL00  FOIL02  FOIL03  FOIL04  Turbine2.inp  Turbine2_temp.inp  err1  fort.11  fort.11.first  fort.11.template  fort.20  post_coeff_single.py  post_png2mp4.sh  post_tecplot.sh  run_first_aegean.sh  run_second_aegean.sh  run_second_msi.sh  run_second_paros.sh  tecplot_clipper.mcr  z_grid.inp
LES/cases/Clipper_tsr5_acs/: FOIL00  FOIL01  FOIL03  FOIL04  Turbine.inp  Urefdata000  acl07_01.mcr  acldata000  acs16.mcr  admr06_01.mcr  admrdata000  copy_to_template.sh  deepclean.sh  fort.11.second  fort.11.template  fort.20  fort.40  post_png2mp4.sh  post_tecplot.sh  q.mcr  recompile_from_runjob.sh  run_first_aegean.sh  run_second_aegean.sh  tec.mcr  z_grid.inp
LES/cases/HornsRev_farm_acl/: CD00  CL00  FSI2_nacelle_temp.inp  FSI2_rotor_temp.inp  FSI_Prescribe.inp  LES.IN  Nacelle.inp  Turbine.inp  Turbine2.inp  Turbine2_temp.inp  Urefdata000  acsdata000  acsdata000.stl  admrdata000.stl  clean.sh  copy_to_template.sh  deepclean.sh  fort.11  fort.11.first  fort.12.first  fort.12.second  fort.20  fort.40  fort.55  grid.h5  nacelle000  nacelle000.stl  nacelle001  nacelle001.stl  nacelle002  nacelle002.stl  post_coeff_single.py  post_control.inp  post_coord_input.inp  post_png2mp4.sh  post_tecplot.sh  project_les_to_hos.py  recompile_from_runjob.sh  run_first_aegean.sh  (+8 more)
LES/fll_simplified/: CMakeLists.txt  Makefile  example_1.f90  fll.dep  fll_cat.f90  fll_duplicate.f90  fll_mk.f90  fll_nnodes.f90  fll_read.f90  fll_read_ffa.f90  fll_read_ucd.f90  fll_rm.f90  fort.99
LES/python_scripts/: __init__.py  batch_pbs_latest.py  check_stat_quick_latest.py  gather_post.py  post_coeff_single.py  post_png2mp4.sh  pyMapField.py  rclone_batch_upload.sh
(+276 files in other folders)
